# SoftBodySimulation

./: .gitignore  CMakeLists.txt  CMakePresets.json  Main.cpp  Main1.cpp  Main2.cpp  Main3.cpp  README.md  vcpkg.json
CMake/: Dependencies.cmake
Client/: OrbitCamera.cpp  OrbitCamera.hpp  SceneFactory.hpp  SoftBodyApp.cpp  SoftBodyApp.hpp
Engine/: Engine.cpp  Engine.hpp  Exodia.hpp  Settings.cpp  Settings.hpp
Engine/Box/: AABB.cpp  AABB.hpp
Engine/Components/: Pickable.hpp  Renderable.hpp  Transform.cpp  Transform.hpp  Transformable.hpp
Engine/Mesh/: Mesh.cpp  Mesh.hpp  Vertex.hpp
Engine/Mesh/Primitives/: Cube.cpp  MeshPrimitives.hpp  Quad.cpp  ScreenQuad.hpp  Sphere.cpp
Engine/Physics/Bodies/: Body.hpp  RigidBody.hpp  SoftBody.hpp
Engine/Physics/Constraints/: CollisionConstraint.hpp  Constraint.hpp  DihedralBendConstraint.hpp  DistanceConstraint.hpp  FastBendConstraint.hpp  FixedConstraint.hpp  GlobalVolumeConstraint.hpp  VolumeConstraint.hpp
Engine/Physics/Force/: UniformAccelerationField.hpp
Engine/Physics/Particle/: Particle.hpp
Engine/Physics/Solver/: Solver.hpp
Engine/Ray/: PickResult.hpp
Engine/Renderer/: PostProcessing.cpp  PostProcessing.hpp  ShadowRenderer.cpp  ShadowRenderer.hpp
Engine/Renderer/Camera/: Camera.cpp  Camera.hpp
Engine/Renderer/Light/: Light.hpp
Engine/Renderer/Materials/: DepthMaterial.hpp  Material.cpp  Material.hpp  PBRMaterial.cpp  PBRMaterial.hpp
Engine/Renderer/Shader/: Shader.cpp  Shader.hpp
Engine/Renderer/Texture/: Texture.cpp  Texture.hpp
Engine/Scene/: Scene.cpp  Scene.hpp
Engine/Utils/: Observable.hpp  Random.hpp  UUID.hpp  Utils.cpp  Utils.hpp
